# calendar-sync

./: .dockerignore  .env.example  .gitignore  .sops.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
infra/: .env.enc  .env.example  docker-compose.yml
scripts/: google_auth.py  reauth.sh
src/calendar_sync/: __main__.py  config.py  db.py  google_client.py  health.py  icloud_client.py  main.py  models.py  sync_engine.py
tests/: test_sync_engine.py
