[project]
name = "calendar-sync"
version = "0.1.0"
description = "Bidirectional sync between iCloud and Google Calendar"
requires-python = ">=3.12"
dependencies = [
    "caldav>=1.4",
    "icalendar>=6.0",
    "google-api-python-client>=2.100",
    "google-auth-httplib2>=0.2",
    "google-auth-oauthlib>=1.2",
    "pydantic-settings>=2.0",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
